fix modal centering on mobile

--- a/public/html-mockup/css/global.css
+++ b/public/html-mockup/css/global.css
@@ -41,4 +41,9 @@
 
 .filter-modal .modal {
     width: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -125px;
+    margin-left: -150px;
 }
